--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,7 +24,7 @@
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 12px;
+  font-size: 2rem;
   display: flex;
   align-items: center;
 }
