--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,12 @@
   color: #fff;
   font-size: 100px;
 }
+
+.about-us {
+  background-color: cadetblue;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
