--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,11 @@
   text-align: center;
   justify-content: center;
 }
+.about-us {
+background-color: cadetblue;
+background-position: center;
+background-size: cover;
+background-repeat: no-repeat;
+color: #fff;
+font-size: 100px;
+}
